--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
-    "prisma": "^6.14.0"
+    "nodemailer": "^7.0.6",
+    "prisma": "^6.14.0",
+    "zod": "^4.1.5"
   },
   "devDependencies": {
     "@types/bcrypt": "^6.0.0",
@@ -25,6 +27,7 @@
     "@types/express": "^5.0.3",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^24.3.0",
+    "@types/nodemailer": "^7.0.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.2"
   }
