--- a/package.json
+++ b/package.json
@@ -12,14 +12,19 @@
   "description": "",
   "dependencies": {
     "@prisma/client": "^6.14.0",
+    "axios": "^1.11.0",
     "bcrypt": "^6.0.0",
+    "cloudinary": "^2.7.0",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
+    "google-auth-library": "^10.3.0",
     "jsonwebtoken": "^9.0.2",
+    "multer": "^2.0.2",
     "nodemailer": "^7.0.6",
     "prisma": "^6.14.0",
+    "streamifier": "^0.1.1",
     "zod": "^4.1.5"
   },
   "devDependencies": {
@@ -28,8 +33,10 @@
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
     "@types/jsonwebtoken": "^9.0.10",
+    "@types/multer": "^2.0.0",
     "@types/node": "^24.3.0",
     "@types/nodemailer": "^7.0.1",
+    "@types/streamifier": "^0.1.2",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.2"
   }
