--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "multer": "^2.0.2",
     "nodemailer": "^7.0.6",
     "prisma": "^6.14.0",
+    "slug": "^11.0.0",
     "streamifier": "^0.1.1",
     "zod": "^4.1.5"
   },
@@ -36,6 +37,7 @@
     "@types/multer": "^2.0.0",
     "@types/node": "^24.3.0",
     "@types/nodemailer": "^7.0.1",
+    "@types/slug": "^5.0.9",
     "@types/streamifier": "^0.1.2",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.2"
