--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "google-auth-library": "^10.3.0",
     "jsonwebtoken": "^9.0.2",
     "multer": "^2.0.2",
+    "node-html-parser": "^7.0.1",
     "nodemailer": "^7.0.6",
     "prisma": "^6.14.0",
     "slug": "^11.0.0",
