--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "main": "src/index.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon src/index.ts"
+    "dev": "nodemon src/index.ts",
+    "seed": "ts-node seed.ts"
   },
   "keywords": [],
   "author": "",
