--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon src/index.ts",
-    "seed": "ts-node seed.ts"
+    "seed": "ts-node seed.ts",
+    "postinstall": "prisma generate"
   },
   "keywords": [],
   "author": "",
