--- a/vercel.json
+++ b/vercel.json
@@ -9,10 +9,7 @@
     "routes": [
         {
             "src": "/(.*)",
-            "dest": "/src/index.ts",
-            "headers": {
-                "Cache-Control": "no-cache, no-store, must-revalidate"
-            }
+            "dest": "/src/index.ts"
         }
     ]
 }
