--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "node-html-parser": "^7.0.1",
     "nodemailer": "^7.0.6",
     "prisma": "^6.14.0",
-    "slug": "^11.0.0",
+    "slugify": "^1.6.6",
     "streamifier": "^0.1.1",
     "zod": "^4.1.5"
   },
